--- a/log4j-transform-maven-shade-plugin-extensions/README.adoc
+++ b/log4j-transform-maven-shade-plugin-extensions/README.adoc
@@ -32,7 +32,7 @@ This resource transformer is usually used together with the `ManifestResourceTra
 
 A typical configuration is:
 
-[xml]
+[source,xml]
 ----
 <project>
   [...]
