--- a/log4j-transform-maven-plugin/src/doc/process-classes-mojo.adoc
+++ b/log4j-transform-maven-plugin/src/doc/process-classes-mojo.adoc
@@ -18,7 +18,7 @@
 
 *Full name*:
 
-org.apache.logging.log4j:log4j-transform-maven-plugin:0.1.0-SNAPSHOT:process-classes
+org.apache.logging.log4j:log4j-transform-maven-plugin:0.1.0:process-classes
 
 *Description*:
 
