--- a/log4j-transform-maven-shade-plugin-extensions/README.adoc
+++ b/log4j-transform-maven-shade-plugin-extensions/README.adoc
@@ -45,9 +45,9 @@ A typical configuration is:
         <version>3.4.1</version>
         <dependencies>
           <dependency>
-            <groupId>io.github.edwgiz</groupId>
-            <artifactId>log4j-maven-shade-plugin-extensions</artifactId>
-            <version>2.20.0</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-transform-maven-shade-plugin-extensions</artifactId>
+            <version>0.1.0</version>
           </dependency>
         </dependencies>
         <executions>
