--- a/src/site/_release-notes/_0.x.x.adoc
+++ b/src/site/_release-notes/_0.x.x.adoc
@@ -49,4 +49,5 @@ This is the second release of the project.
 ==== Changed
 
 * Migrated `logging-parent` to version `10.2.0` and adopted its CI and `pom.xml` infrastructure
+* Update `org.junit:junit-bom` to version `5.10.1` (https://github.com/apache/logging-log4j-transform/pull/63[63])
 * Update `org.ow2.asm:asm-bom` to version `9.6`
