--- a/src/site/_release-notes/_0.x.x.adoc
+++ b/src/site/_release-notes/_0.x.x.adoc
@@ -49,6 +49,7 @@ This is the second release of the project.
 ==== Changed
 
 * Migrated `logging-parent` to version `10.2.0` and adopted its CI and `pom.xml` infrastructure
+* Update `org.apache.commons:commons-lang3` to version `3.14.0` (https://github.com/apache/logging-log4j-transform/pull/69[69])
 * Update `org.apache.maven:maven-core` to version `3.9.6` (https://github.com/apache/logging-log4j-transform/pull/65[65])
 * Update `org.apache.maven.plugins:maven-shade-plugin` to version `3.5.1` (https://github.com/apache/logging-log4j-transform/pull/64[64])
 * Update `org.junit:junit-bom` to version `5.10.1` (https://github.com/apache/logging-log4j-transform/pull/63[63])
