--- a/src/site/_release-notes/_0.x.x.adoc
+++ b/src/site/_release-notes/_0.x.x.adoc
@@ -50,6 +50,7 @@ This is the second release of the project.
 
 * Migrated `logging-parent` to version `10.2.0` and adopted its CI and `pom.xml` infrastructure
 * Update `org.apache.commons:commons-lang3` to version `3.14.0` (https://github.com/apache/logging-log4j-transform/pull/69[69])
+* Update `org.apache.logging.log4j:log4j-bom` to version `2.22.0` (https://github.com/apache/logging-log4j-transform/pull/71[71])
 * Update `org.apache.maven:maven-core` to version `3.9.6` (https://github.com/apache/logging-log4j-transform/pull/65[65])
 * Update `org.apache.maven.plugins:maven-invoker-plugin` to version `3.6.0` (https://github.com/apache/logging-log4j-transform/pull/68[68])
 * Update `org.apache.maven.plugins:maven-shade-plugin` to version `3.5.1` (https://github.com/apache/logging-log4j-transform/pull/64[64])
