--- a/src/site/_release-notes/_0.x.x.adoc
+++ b/src/site/_release-notes/_0.x.x.adoc
@@ -53,9 +53,12 @@ This is the second release of the project.
 * Update `commons-logging:commons-logging` to version `1.3.0` (https://github.com/apache/logging-log4j-transform/pull/67[67])
 * Update `org.apache.commons:commons-lang3` to version `3.14.0` (https://github.com/apache/logging-log4j-transform/pull/69[69])
 * Update `org.apache.logging.log4j:log4j-bom` to version `2.22.0` (https://github.com/apache/logging-log4j-transform/pull/71[71])
-* Update `org.apache.logging:logging-parent` to version `10.4.0` (https://github.com/apache/logging-log4j-transform/pull/66[66])
 * Update `org.apache.maven:maven-core` to version `3.9.6` (https://github.com/apache/logging-log4j-transform/pull/65[65])
 * Update `org.apache.maven.plugins:maven-invoker-plugin` to version `3.6.0` (https://github.com/apache/logging-log4j-transform/pull/68[68])
 * Update `org.apache.maven.plugins:maven-shade-plugin` to version `3.5.1` (https://github.com/apache/logging-log4j-transform/pull/64[64])
 * Update `org.junit:junit-bom` to version `5.10.1` (https://github.com/apache/logging-log4j-transform/pull/63[63])
 * Update `org.ow2.asm:asm-bom` to version `9.6`
+
+==== Updated
+
+* Update `org.apache.logging:logging-parent` to version `10.5.0` (https://github.com/apache/logging-log4j-transform/pull/72[72])
