--- a/src/site/_release-notes/_0.x.x.adoc
+++ b/src/site/_release-notes/_0.x.x.adoc
@@ -62,4 +62,5 @@ This is the second release of the project.
 
 * Update `org.apache.logging.log4j:log4j-bom` to version `2.22.1` (https://github.com/apache/logging-log4j-transform/pull/74[74])
 * Update `org.apache.logging:logging-parent` to version `10.5.0` (https://github.com/apache/logging-log4j-transform/pull/72[72])
+* Update `org.assertj:assertj-core` to version `3.25.0` (https://github.com/apache/logging-log4j-transform/pull/76[76])
 * Update `org.slf4j:slf4j-api` to version `2.0.10` (https://github.com/apache/logging-log4j-transform/pull/75[75])
