--- a/src/site/_release-notes/_0.x.x.adoc
+++ b/src/site/_release-notes/_0.x.x.adoc
@@ -63,4 +63,5 @@ This is the second release of the project.
 * Update `org.apache.logging.log4j:log4j-bom` to version `2.22.1` (https://github.com/apache/logging-log4j-transform/pull/74[74])
 * Update `org.apache.logging:logging-parent` to version `10.5.0` (https://github.com/apache/logging-log4j-transform/pull/72[72])
 * Update `org.assertj:assertj-core` to version `3.25.1` (https://github.com/apache/logging-log4j-transform/pull/77[77])
+* Update `org.jacoco:jacoco-maven-plugin` to version `0.8.11` (https://github.com/apache/logging-log4j-transform/pull/61[61])
 * Update `org.slf4j:slf4j-api` to version `2.0.11` (https://github.com/apache/logging-log4j-transform/pull/78[78])
