--- a/src/site/_release-notes/_0.x.x.adoc
+++ b/src/site/_release-notes/_0.x.x.adoc
@@ -49,15 +49,19 @@ This is the second release of the project.
 ==== Changed
 
 * Migrated `logging-parent` to version `10.2.0` and adopted its CI and `pom.xml` infrastructure
-* Update `commons-io:commons-io` to version `2.15.1` (https://github.com/apache/logging-log4j-transform/pull/70[70])
 * Update `commons-logging:commons-logging` to version `1.3.0` (https://github.com/apache/logging-log4j-transform/pull/67[67])
 * Update `org.apache.commons:commons-lang3` to version `3.14.0` (https://github.com/apache/logging-log4j-transform/pull/69[69])
 * Update `org.apache.maven:maven-core` to version `3.9.6` (https://github.com/apache/logging-log4j-transform/pull/65[65])
 * Update `org.apache.maven.plugins:maven-invoker-plugin` to version `3.6.0` (https://github.com/apache/logging-log4j-transform/pull/68[68])
 
+==== Fixed
+
+* Fixed transformation of a single `Log4j2Plugins.dat` plugin. (https://github.com/apache/logging-log4j-transform/pull/87[87])
+
 ==== Updated
 
 * Update `apache/logging-parent` to version `` (https://github.com/apache/logging-log4j-transform/pull/80[80])
+* Update `commons-io:commons-io` to version `2.16.0` (https://github.com/apache/logging-log4j-transform/pull/91[91])
 * Update `org.apache.logging.log4j:log4j-bom` to version `2.23.1` (https://github.com/apache/logging-log4j-transform/pull/88[88])
 * Update `org.apache.logging:logging-parent` to version `10.5.0` (https://github.com/apache/logging-log4j-transform/pull/72[72])
 * Update `org.apache.maven.plugins:maven-shade-plugin` to version `3.5.2` (https://github.com/apache/logging-log4j-transform/pull/85[85])
