Add CLI Tools to navigation bar

--- a/src/site/antora/modules/ROOT/nav.adoc
+++ b/src/site/antora/modules/ROOT/nav.adoc
@@ -16,6 +16,7 @@
 ////
 
 * Components
+** xref:cli.adoc[]
 ** xref:log4j-transform-maven-plugin.adoc[]
 ** xref:log4j-transform-maven-shade-plugin-extensions.adoc[]
 * xref:development.adoc[]
