Adds a `log4j-transform-cli` tool (#148)
This PR adds a simple `picocli`-based tool to access the Configuration Converter API from the command line.
Currently, two commands are available:

- `configFile listFormats` lists the available configuration file formats.
- `configFile convert` converts configuration files from one format to another (e.g., a Log4j 1 Properties file to a Log4j 2 Core XML file).

Part of apache/logging-log4j2#3220

--- a/src/site/antora/modules/ROOT/pages/cli.adoc
+++ b/src/site/antora/modules/ROOT/pages/cli.adoc
@@ -257,5 +257,22 @@ A list of file paths to the runtime dependencies of your application, separated 
 
 The command will filter and output each `reflect-config.json` in its original path under the `META-INF/native-image` subfolder of the output directory.
 
-[#log4j-converter-plugin-descriptor-example]
-=== Examples
+[#log4j-transform-cli]
+== `log4j-transform-cli`
+
+The `log4j-transform-cli` tool provides CLI access to some of the functionalities offered by
+xref:ROOT::index.adoc[].
+
+Currently, you can use it to:
+
+* Convert between different formats of logging configuration files.
+See <<log4j-transform-cli-configFile-convert>> for the syntax.
+
+* List the support configuration file formats.
+See <<log4j-transform-cli-configFile-listFormats>> for the syntax.
+
+[#log4j-transform-cli-configFile-convert]
+include::cli::partial$config-file-convert.adoc[leveloffset=2]
+
+[#log4j-transform-cli-configFile-listFormats]
+include::cli::partial$config-file-list-formats.adoc[leveloffset=2]
